Add templates and parameters

--- a/src/views/index.njk
+++ b/src/views/index.njk
@@ -1,4 +1,12 @@
 {% extends 'src/views/partials/layout.njk' %}
 {% block content %}
-    <h1><b>Home<b></h1>
+    <h1>
+        <b>Home<b></h1>
+            <h3>Hello {{ name }}</h3>
+            <h5>Fruits:</h5>
+            <ul>
+                {% for fruit in fruits %}
+                    <li>{{ fruit }}</li>
+                {% endfor %}
+            </ul>
         {% endblock %}
