--- a/src/views/index.njk
+++ b/src/views/index.njk
@@ -9,4 +9,11 @@
                     <li>{{ fruit }}</li>
                 {% endfor %}
             </ul>
+            <ul>
+            {% for i in range (1, 9) %}
+                <li>
+                    <a href="/page{{ i }}.html">Page {{ i }}</a>
+                </li>
+            {% endfor %}
+            </ul>
         {% endblock %}
