Add Rick and Morty static page generator

--- a/src/views/index.njk
+++ b/src/views/index.njk
@@ -1,19 +1,17 @@
 {% extends 'src/views/partials/layout.njk' %}
 {% block content %}
-    <h1>
-        <b>Home<b></h1>
-            <h3>Hello {{ name }}</h3>
-            <h5>Fruits:</h5>
-            <ul>
-                {% for fruit in fruits %}
-                    <li>{{ fruit }}</li>
-                {% endfor %}
-            </ul>
-            <ul>
-            {% for i in range (1, 9) %}
-                <li>
-                    <a href="/page{{ i }}.html">Page {{ i }}</a>
-                </li>
-            {% endfor %}
-            </ul>
-        {% endblock %}
+    <div class="row">
+        {% for character in characters%}
+            <div class="col-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="{{character.image}}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">{{character.name}}</h5>
+                        <a href="/{{character.id}}.html" class="btn btn-primary">Details</a>
+                    </div>
+                </div>
+                
+            </div>
+        {% endfor %}
+    </div>
+{% endblock %}
