--- a/src/views/page.njk
+++ b/src/views/page.njk
@@ -1,5 +1,36 @@
 {% extends 'src/views/partials/layout.njk' %}
 {% block content %}
-    <h1>
-        <b>Page {{page}}<b></h1>
-{% endblock %}
+    <div class="col-3">
+        <div class="card" style="width: 18rem;">
+            <img src="{{ character.image }}" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">{{ character.name }}</h5>
+                    <p class="card text">
+                        <table class="table tabkle-striped table-hover">
+                            <tbody>
+                                <tr>
+                                    <th>Status</th>
+                                    <td>{{ character.status }}</td>
+                                </tr>
+                                <tr>
+                                    <th>Gender</th>
+                                    <td>{{ character.gender }}</td>
+                                </tr>
+                                <tr>
+                                    <th>Species</th>
+                                    <td>{{ character.species }}</td>
+                                </tr>
+                                <tr>
+                                    <th>Location</th>
+                                    <td>{{ character.location }}</td>
+                                </tr>
+                                <tr>
+                                    <th>Episodes</th>
+                                    <td>{{ character.episode.length }}</td>
+                                </tr>
+                            </p>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        {% endblock %}
