Add deploy script

--- a/src/views/page.njk
+++ b/src/views/page.njk
@@ -22,7 +22,11 @@
                                 </tr>
                                 <tr>
                                     <th>Location</th>
-                                    <td>{{ character.location }}</td>
+                                    <td>{{ character.location.name }}</td>
+                                </tr>
+                                <tr>
+                                    <th>Origin</th>
+                                    <td>{{ character.origin.name }}</td>
                                 </tr>
                                 <tr>
                                     <th>Episodes</th>
